force-app/main/default/objects/Merchandise__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Merchandise Description</description>
    <inlineHelpText>.........................................</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>