force-app/main/default/objects/Merchandise__c/fields/Inventory2__c.field-meta.xml
<CustomField>
    <fullName>Inventory2__c</fullName>
    <label>Inventory2</label>
    <summarizedField>Line_Item__c.Units_Sold__c</summarizedField>
    <summaryForeignKey>Line_Item__c.Merchandise__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>