force-app/main/default/objects/Merchandise__c/fields/Total_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory__c</fullName>
    <description>Total Price Of Merchandise</description>
    <inlineHelpText>.............................................</inlineHelpText>
    <label>Total Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>